<resources>
    <string name="app_name">NYTimesArticleSearch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="hint">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="submit_filter">Save</string>
    <string name="arts">Arts</string>
    <string name="fashion"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="sort_label">Sort Order:</string>
    <string name="date">Choose date</string>
    <string name="begin_date_label">Begin Date:</string>
    <string name="category_label">Article Category:</string>
    <string-array name="sort_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
